# gbif

./: README-template.md  README.md  docker_env  environment.yml  item.json  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: installation_and_basic_usage.ipynb
examples/: collection.json  item.json
src/stactools/gbif/: __init__.py  column_descriptions.json  commands.py  stac.py
tests/: test_commands.py  test_module.py  test_stac.py
