[metadata]
name = stactools-gbif
version = attr: stactools.gbif.__version__
description = stactools package for GBIF
long_description = file: README.md
long_description_content_type = text/markdown
author = stac-utils
author_email = stac@radiant.earth
url = https://github.com/stactools-packages/gbif
project_urls =
    Documentation = https://stactools-gbif.readthedocs.io/en/latest/
    Issues = https://github.com/stactools-packages/gbif/issues
keywords =
    stactools
    pystac
    catalog
    STAC
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find_namespace:
include_package_data = True
install_requires =
    stactools
    # git+https://github.com/TomAugspurger/stac-table
    adlfs
    lxml

[options.packages.find]
where = src

[options.package_data]
stactools.gbif =
  *.json
